# hse_asml_course

./: .gitignore  README.md  pyproject.toml
seminar_x_kalman/: Kalman2SOLVED.ipynb  kalmanFitTest.py  kalmanInfTest.py  kalmanlib.py  pykalmanTest.py
seminars/: seminar_01_max_likelihood.ipynb
seminars/seminar_6/: data.xlsx  stat.ipynb  stat_0.ipynb
