[tool.poetry]
name = "hse-asml-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
plotly = "^5.23.0"
nbformat = "^5.10.4"
ipywidgets = "^8.1.3"
networkx = "^3.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
